<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="User"
            type="com.test.test.model.User"
            />
    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.input.InputFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/photo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusable="true"
                    android:clickable="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintDimensionRatio="1:1"
                    app:srcCompat="@drawable/baseline_photo_camera_front_24"
                    tools:src="@tools:sample/avatars"
                    >

                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minLines="2"
                    android:text="@{User.nombre}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minLines="2"
                    android:text="@{User.edad}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domicilio_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domicilio_calle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minLines="2"
                    android:text="@{User.domicilio_calle}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domicilio_no_exterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domicilio_no_exterior"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:minLines="2"
                    android:text="@{User.domicilio_no_exterior}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domicilio_no_interior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domicilio_no_interior"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:minLines="2"
                    android:text="@{User.domicilio_no_interior}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_inner_space"
                android:gravity="center_vertical"
                android:text="@string/state"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardNumber"
                ></androidx.appcompat.widget.AppCompatSpinner>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_inner_space"
                android:gravity="center_vertical"
                android:text="@string/town"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/municipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></androidx.appcompat.widget.AppCompatSpinner>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_inner_space"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domicilio_colonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domicilio_colonia"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:minLines="2"
                    android:text="@{User.domicilio_colonia}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintEnd_toStartOf="@+id/delete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/save"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>
